@@ -26,12 +26,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<!-- World may not be ready for latest Java yet; 
-						these are excludes for earlier-dependent stuff -->
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+						<arg>--source</arg><arg>${javase.version}</arg>
+					</compilerArgs>
 					<excludes>
-
-						<!-- Preview -->
-						<exclude>sealedclasses/*.java</exclude>
 
 						<!-- javafx not included in some JDK distributions. -->
 						<exclude>javafx/*.java</exclude>
@@ -43,9 +42,6 @@
 
 						<!-- Won't compile with UTF-8! -->
 						<exclude>lang/EuroLanguage.java</exclude>
-
-						<!-- Used private API which is no longer available -->
-						<exclude>netweb/WebServerSimpleSE.java</exclude>
 
 						<exclude>plotter/Penman.java</exclude>
 
@@ -105,7 +101,6 @@
 				<artifactId>maven-pmd-plugin</artifactId>
 				<version>3.17.0</version>
 				<configuration>
-					<linkXref>false</linkXref>
 					<sourceEncoding>utf-8</sourceEncoding>
 					<minimumTokens>100</minimumTokens>
 					<format>txt</format>
@@ -240,21 +235,5 @@
 			<url>https://nexus.bedatadriven.com/content/groups/public/</url>
 		</repository>
 	</repositories>
-
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.7</version>
-				<configuration>
-					<formats>
-						<format>html</format>
-						<format>xml</format>
-					</formats>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
 
 </project>
